--- a/_laravel5/public/app/modules/add/views/add.html
+++ b/_laravel5/public/app/modules/add/views/add.html
@@ -1,17 +1,25 @@
-<div layout="row" layout-align="center center">
+<div layout="row" layout-align="center center" ng-controller="AddController">
     <md-whiteframe class="md-whiteframe-3dp" flex="25">
-        <md-input-container>
-            <label>Russian</label>
-            <input ng-model="user.phone" type="text">
-        </md-input-container>
+        <form name="wordForm">
+            <md-input-container>
+                <label>Russian</label>
+                <input required name="rus" ng-model="rus" type="text">
+                <div ng-messages="wordForm.rus.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
 
-        <md-input-container>
-            <label>English</label>
-            <input ng-model="user.phone" type="text" >
-        </md-input-container>
-        <div layout="row">
-            <md-button class="md-raised md-primary" flex>Add Word</md-button>
-        </div>
+            <md-input-container>
+                <label>English</label>
+                <input required name="en" ng-model="en" type="text" >
+                <div ng-messages="wordForm.en.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
+            <div layout="row">
+                <md-button ng-click="addWord()" class="md-raised md-primary" flex>Add Word</md-button>
+            </div>
+        </form>
     </md-whiteframe>
 </div>
 
@@ -22,10 +30,8 @@
     md-input-container label:not(.md-no-float){
         padding-left: 10px;
     }
-/*    md-input-container input[type="text"]{
-        border: 1px solid rgb(220, 220, 220);
+    md-input-container input[type="text"]{
+        font-size: 30px;
+        text-align: center;
     }
-    md-input-container.md-input-focused  input[type="text"]{
-        border: 1px solid rgb(63,81,181)
-    }*/
 </style>
